# hgnetv2-deeplabv3

./: .gitignore  AllLabs.py  LICENSE  PATH.py  README.md  README_EN.md  config.ini  deeplab.py  export.py  gen_checksum.py  get_miou.py  inieditor.py  predict.py  pyproject.toml  requirements.txt  setup.py  setup.py.old  summary.py  train.py  update.bat
.github/workflows/: main.yml
doc/: lab.md  pspnet.md  segformer.md  unet.md
example/config/: hgnetv2l-deeplab.ini  hgnetv2l-translab.ini  hgnetv2l-unet.ini  mobilenetv3l-deeplab.ini
nets/: TransEnc.py  TransPP.py  deeplabv3_plus.py  labs.py  mobilenetv2.py  third_party_backbone.py  xception.py
nets/BackBone/: HGNetv2.py  MobileNetv2.py  Xception.py  YOLOv8.py  __init__.py
nets/Head/: BaseLab.py  LabHeader.py  __init__.py
nets/modules/: ViT.py  __init__.py  block.py  feature_decoder.py
utils/: __init__.py  callbacks.py  check.py  utils.py  utils_fit.py
yiku/: AllLabs.py  PATH.py  __init__.py  export.py  model_warp.py  predict.py  train.py
yiku/assets/: checksum.json
yiku/config/: __init__.py
yiku/data/: AutoLoaderSelector.py  SimpleDataloader.py  VOCdataloader.py  dataloader.py  process.py
yiku/nets/: labs.py  training_utils.py  weights_loader.py
yiku/nets/BackBone/: HGNetv2.py  MobileNetv2.py  MobileNetv3.py  STDCNet.py  Xception.py  YOLOv8.py  __init__.py
yiku/nets/Head/: DeepLabv3plusHeader.py  LabHeader.py  __init__.py
yiku/nets/loss/: Bootstrapped_CELoss.py  CELoss.py  DiceLoss.py  FocalLoss.py  __init__.py
yiku/nets/modules/: HGBlock.py  PP_block.py  ViT.py  __init__.py  block.py  feature_decoder.py  (+1 more)
yiku/test/: test_download.py
yiku/utils/: callbacks.py  check.py  dataloader.py  download.py  get_featuremap.py  single_ch.py  utils.py  utils_fit.py  utils_metrics.py  utils_wts_init.py
(+12 files in other folders)
